fix: 코스 인기순 정렬 코드 수정